Changing flour to yeast

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<h1>Recipie</h1>
 		<ul>
 			<li>Flour</li>
-			<li>Yeast</li>
+			<li>Sugar</li>
 			<li>Chocolate Chips</li>
 			<li>Baking Soda</li>
 		<ul>
